Fixed a bug where changing the slider made the page jump, updated examples to use the correct syntax, added correct item hover css rule.

--- a/slider.css
+++ b/slider.css
@@ -46,6 +46,7 @@ p {
     color: grey;
     top: 36%;
     transform: translateY(-50%);
+    cursor: pointer;
 }
 .slider .carousel-control:hover,
 .slider .carousel-control:focus {
